--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/sofianeOuafir/wheater-app#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "request": "^2.87.0",
     "yargs": "^12.0.1"
   }
